# acme-migration-demo

./: README.md
.github/workflows/: ci.yml  promote-prod.yml  publish-qa.yml
acme-data-utils/: .gitignore  README.md  setup.cfg  setup.py
acme-data-utils/.github/workflows/: ci.yml  publish-qa.yml
acme-data-utils/acme_data_utils/: __init__.py  core.py
acme-data-utils/tests/: test_smoke.py
terraform/: main.tf  variables.tf
