[metadata]
name = acme-data-utils
version = 1.1.3
author = Acme Corp
author_email = engineering@acme-corp.example.com
description = Fast data-processing utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = acme_data_utils
python_requires = >=3.9

[options.extras_require]
test =
    pytest>=7.0
